Bug 486283 - crash when opening an e-mail which failed to be sent
Summary: crash when opening an e-mail which failed to be sent
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-04-29 09:55 UTC by Daniel Moyne
Modified: 2024-08-06 17:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Moyne 2024-04-29 09:55:24 UTC
Application: kmail (5.24.5 (23.08.5))

Qt Version: 5.15.13
Frameworks Version: 5.115.0
Operating System: Linux 6.8.0-31-generic x86_64
Windowing System: X11
Distribution: Ubuntu 24.04 LTS
DrKonqi: 5.27.11 [KCrashBackend]

-- Information about the crash:
when opening an e-mail  which failed to be sent the mail crashes but not the kmail application

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault

[KCrash Handler]
#4  0x000077c8e6112695 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x000077c8ef704cd4 in KMCommand::completed(KMCommand*) () from /lib/x86_64-linux-gnu/libkmailprivate.so.5
#6  0x000077c8ef81dc93 in KMCommand::slotPostTransfer(KMCommand::Result) () from /lib/x86_64-linux-gnu/libkmailprivate.so.5
#7  0x000077c8e6112e16 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x000077c8ef704c70 in KMCommand::messagesTransfered(KMCommand::Result) () from /lib/x86_64-linux-gnu/libkmailprivate.so.5
#9  0x000077c8e6112e16 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x000077c8e73a8266 in KJob::result(KJob*, KJob::QPrivateSignal) () from /lib/x86_64-linux-gnu/libKF5CoreAddons.so.5
#11 0x000077c8e73ae0eb in ?? () from /lib/x86_64-linux-gnu/libKF5CoreAddons.so.5
#12 0x000077c8e6106343 in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x000077c8e6d6bd45 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x000077c8e60d8118 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x000077c8e60db94b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x000077c8e6135c0f in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x000077c8e1c095b5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x000077c8e1c68717 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x000077c8e1c08a53 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x000077c8e6135279 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x000077c8e60d6a7b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x000077c8e60df3e8 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00005ba6e602e1b9 in ?? ()
#24 0x000077c8e562a1ca in __libc_start_call_main (main=main@entry=0x5ba6e602d0e0, argc=argc@entry=3, argv=argv@entry=0x7ffc0d6001d8) at ../sysdeps/nptl/libc_start_call_main.h:58
#25 0x000077c8e562a28b in __libc_start_main_impl (main=0x5ba6e602d0e0, argc=3, argv=0x7ffc0d6001d8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffc0d6001c8) at ../csu/libc-start.c:360
#26 0x00005ba6e602e8a5 in ?? ()
[Inferior 1 (process 3176) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2024-07-10 08:48:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kmail/-/merge_requests/137
Comment 2 Daniel Moyne 2024-07-12 12:51:44 UTC
I am no more using Kmail preferring now Thunderbird
Comment 3 Fabian Vogt 2024-07-19 06:57:28 UTC
Git commit ba6572b9b9029a1431333bc52109011a4382ae02 by Fabian Vogt.
Committed on 19/07/2024 at 06:53.
Pushed by fvogt into branch 'master'.

Fix crash due to deleteLater() + nested event loop

KMEditItemCommand::execute creates a connection that does deleteLater(),
but also calls KMComposerWin::setMessage which creates a nested QEventLoop
in Kleo::KeyCache::Private::ensureCachePopulated. This nested event loop
thus deletes KMEditItemCommand within KMEditItemCommand::execute, causing
a crash.

Fix this by creating the connection for deleteLater as late as possible
and also call setDeletesItself(true) for good measure.

M  +6    -5    src/kmcommands.cpp

https://invent.kde.org/pim/kmail/-/commit/ba6572b9b9029a1431333bc52109011a4382ae02
Comment 4 Fabian Vogt 2024-08-06 17:36:04 UTC
Git commit ca222e9e98bbaba4f9841a1bc0b4bc324ff95bab by Fabian Vogt.
Committed on 06/08/2024 at 17:29.
Pushed by fvogt into branch 'release/24.05'.

Fix crash due to deleteLater() + nested event loop

KMEditItemCommand::execute creates a connection that does deleteLater(),
but also calls KMComposerWin::setMessage which creates a nested QEventLoop
in Kleo::KeyCache::Private::ensureCachePopulated. This nested event loop
thus deletes KMEditItemCommand within KMEditItemCommand::execute, causing
a crash.

Fix this by creating the connection for deleteLater as late as possible
and also call setDeletesItself(true) for good measure.
(cherry picked from commit ba6572b9b9029a1431333bc52109011a4382ae02)

M  +6    -5    src/kmcommands.cpp

https://invent.kde.org/pim/kmail/-/commit/ca222e9e98bbaba4f9841a1bc0b4bc324ff95bab