Fix crash due to deleteLater() + nested event loop

KMEditItemCommand::execute creates a connection that does deleteLater(),
but also calls KMComposerWin::setMessage which creates a nested QEventLoop
in Kleo::KeyCache::Private::ensureCachePopulated. This nested event loop
thus deletes KMEditItemCommand within KMEditItemCommand::execute, causing
a crash.

Fix this by creating the connection for deleteLater as late as possible
and also call setDeletesItself(true) for good measure.

BUG: 486283